--- a/editor/editor.html
+++ b/editor/editor.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="chrome://browser/content/extension.css"></script>
 		<link rel="stylesheet" href="editor.css"/>
 		<script src="../deps/jquery.min.js"></script>
+		<script src="../deps/shortcut.js"></script>
 		<script src="../deps/ace/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 		
 	</head>
@@ -68,8 +69,7 @@
 		</div>
 		<div id="code_container" class="panel-section">
 			
-			<pre id="code_area" >
-				 /* JS code (jQuery available) ...*/
+			<pre id="code_area" > /* JS code (jQuery available) ...*/
 			</pre>
 			
 		</div>
