Edit menu (page action).

--- a/popup/menu.html
+++ b/popup/menu.html
@@ -17,20 +17,14 @@
 		<div id="content">
 			
 		<nav id="menu" class="panel">
-			<ul class="panel-section-list browser-style">
-				<li id="script_entry" class="panel-list-item"><label>Script ></label> 
-					<ul class="panel-section-list hidden-elem">
-						<li id="add_script" class="panel-list-item">
-							<label>Add</label>
-						</li>
-						<li id="edit_script" class="panel-list-item">
-							<label>Edit</label>
-						</li>
-					</ul>
+			<ul class="panel-section-list browser-style"> 
+				<li id="add_script" class="panel-list-item">
+					<label>Add Script For ...</label>
 				</li>
-				<!-- <li id="options_entry" class="panel-list-item"><label>Editor ...</label></li> -->
+				<li id="options_page" class="panel-list-item">
+					<label>Options</label>
+				</li>
 			</ul>
-
 		</nav>
 		
 		</div>
