--- a/menu/menu.html
+++ b/menu/menu.html
@@ -14,19 +14,20 @@
 				<div class="text-section-header">JSLoader</div>
 		</div>
 	
-		<div id="content">
+		<div id="content" class="panel" ng-controller="menuController as menu" ng-cloak>
 			
-		<nav id="menu" class="panel">
-			<ul class="panel-section-list browser-style"> 
-				<li id="add_script" class="panel-list-item">
-					<label>Add Script For ...</label>
-				</li>
-				<li id="options_page" class="panel-list-item">
-					<label>Options</label>
-				</li>
-			</ul>
-		</nav>
-		
+			<nav id="menu">
+				<ul class="panel-section-list browser-style"> 
+					<li id="{{action.id}}" class="panel-list-item" ng-repeat="action in user_actions" ng-click="actionClick($event)" ng-mouseenter="actionEnter($event)" ng-mouseleave="actionLeave($event)">
+						<label> {{action.val}} </label>
+						<ul class="panel-section-list browser-style" ng-if="action.submenu">
+							<li id="{{action.id}}" class="panel-list-item" ng-repeat="subaction in action.submenus" ng-click="actionClick($event)" ng-mouseenter="actionEnter($event)" ng-mouseleave="actionLeave($event)">
+								<label> {{subaction.val}} </label>
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
 		</div>
 				
 		<script src="menu.js"></script>
