--- a/fg/editor/editor.html
+++ b/fg/editor/editor.html
@@ -12,6 +12,7 @@
 	
 	<script src="../deps/shortcut.js"></script>
 	<script src="../deps/ace/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../../utils/jsloader-utils.js" type="text/javascript" charset="utf-8"></script>
 	
   </head>
   
