--- a/fg/page_action/pa.html
+++ b/fg/page_action/pa.html
@@ -13,7 +13,7 @@
 		<script src="../deps/angular.min.js"></script>
 		<script src="../deps/highlightjs/highlight.min.js"></script>
 		<script src="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.js"></script>
-		<script src="../partials/script-list/script-list.js"></script>
+		<script src="../partials/partials.js"></script>
 		
 	</head>
 	
