--- a/fg/page_action/pa.html
+++ b/fg/page_action/pa.html
@@ -31,6 +31,7 @@
 					 parent="site.parent"
 					 editor="page.bg.editor_mgr.openEditorInstanceForScript"
 					 shown="shown"
+					 pa="page.bg.updatePA"
 					 opts="page.bg.option_mgr.editor">
 		</script-list>
 		
@@ -39,6 +40,7 @@
 					 parent="site"
 					 editor="page.bg.editor_mgr.openEditorInstanceForScript"
 					 shown="shown"
+					 pa="page.bg.updatePA"
 					 opts="page.bg.option_mgr.editor">
 		</script-list>
 	  </div>
