--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8" http-equiv="Content-Security-Policy" content="script-src 'self' * 'unsafe-eval'; object-src 'self';">
 	
 	<link rel="stylesheet" href="chrome://browser/content/extension.css">
-	<link rel="stylesheet" href="../deps/ng-tabs/tabs.css">
+	<link rel="stylesheet" href="../styles/tabs.css">
 	<link rel="stylesheet" href="../styles/script-list.css">
 
 	<link rel="stylesheet" href="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.css">
