--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -17,6 +17,7 @@
 	<script src="../deps/jquery.min.js"></script>
 	<script src="../deps/angular.min.js"></script>
 	<script src="../deps/angular-ui-router.min.js"></script>
+	<script src="../deps/angular-route.js"></script>
 	<script src="../deps/highlightjs/highlight.min.js"></script>
 	<script src="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.js"></script>
 	<script src="../partials/partials.js"></script>
