--- a/fg/opt_page/groups.html
+++ b/fg/opt_page/groups.html
@@ -1,16 +1,16 @@
 <div class="panel-section" >
-  <div id="group_head" class="panel-section panel-section-header">
+  <div id="group_head" class="panel-section-header">
 	<div class="text-section-header">{{title}}
-	  <label class="input_import">
-		<input id="import_groups" type="file">
+	  <label class="input_import" style="float:right;">
+		<input id="import_groups" type="file"></input>
 	  </label>
-	  <button class="browser-style jsload-button" ng-show="import_gr_button" ng-click="applyGrImport()"> Apply changes </button>
+	  <button style="float:right;" class="browser-style jsload-button" ng-show="import_gr_button" ng-click="applyGrImport()"> Apply changes </button>
 	</div>
   </div>
-</div><br>
+</div><br></br>
 
-<div class="panel-section" ng-repeat="group in groups" ng-if="!group.isEmpty()">
-
+<div class="panel-section" ng-repeat="group in groups track by group.name" ng-if="!group.isEmpty()">
+  
   <group-list ng-if="!group.isEmpty()"
 			  scripts="group.scripts"
 			  parent="group"
@@ -24,5 +24,5 @@
 			  addscript="page.bg.editor_mgr.openEditorInstanceForGroup"
 			  mgr="page.bg.group_mgr">
   </group-list>
-
-</div> 
+  
+</div>
