--- a/fg/opt_page/groups.html
+++ b/fg/opt_page/groups.html
@@ -1,28 +1,31 @@
-<div class="panel-section" >
-  <div id="group_head" class="panel-section-header">
-	<div class="text-section-header">{{title}}
-	  <label class="input_import" style="float:right;">
-		<input id="import_groups" type="file"></input>
-	  </label>
-	  <button style="float:right;" class="browser-style jsload-button" ng-show="import_gr_button" ng-click="applyGrImport()"> Apply changes </button>
+<div ng-if="groups.length">
+  <div class="panel-section" >
+	<div id="group_head" class="panel-section-header">
+	  <div class="text-section-header">{{title}}
+		<label class="input_import" style="float:right;">
+		  <input id="import_groups" type="file"></input>
+		</label>
+		<button style="float:right;" class="browser-style jsload-button" ng-show="import_gr_button" ng-click="applyGrImport()"> Apply changes </button>
+	  </div>
 	</div>
-  </div>
-</div><br></br>
+  </div><br></br>
 
-<div class="panel-section" ng-repeat="group in groups track by group.name" ng-if="!group.isEmpty()">
-  
-  <group-list ng-if="!group.isEmpty()"
-			  scripts="group.scripts"
-			  parent="group"
-			  port="port"
-			  editor="page.bg.editor_mgr.openEditorInstanceForScript"
-			  shown="shown"
-			  pa="page.bg.updatePA"
-			  opts="page.bg.option_mgr.editor"
-			  sites="group.sites"
-			  parent="group"
-			  addscript="page.bg.editor_mgr.openEditorInstanceForGroup"
-			  mgr="page.bg.group_mgr">
-  </group-list>
-  
+  <div class="panel-section" ng-repeat="group in groups track by group.name" ng-if="!group.isEmpty()">
+	
+	<group-list ng-if="!group.isEmpty()"
+				scripts="group.scripts"
+				parent="group"
+				port="port"
+				editor="page.bg.editor_mgr.openEditorInstanceForScript"
+				shown="shown"
+				pa="page.bg.updatePA"
+				opts="page.bg.option_mgr.editor"
+				sites="group.sites"
+				parent="group"
+				addscript="page.bg.editor_mgr.openEditorInstanceForGroup"
+				mgr="page.bg.group_mgr">
+	</group-list>
+	
+  </div>
 </div>
+<no-info ng-if="!groups.length"></no-info>
