--- a/fg/opt_page/settings.html
+++ b/fg/opt_page/settings.html
@@ -32,7 +32,7 @@
 
   <div class="opt-submit-outter">
 	<div class="opt-submit-inner">
-	  <input type="submit" value="Save Options" class="browser-style jsload-button"></input>
+	  <button type="submit" class="browser-style"> Save settings</button>
 	</div>
   </div>
   
