JSL Alpha 1: Building PA.

--- a/fg/opt_page/domains.html
+++ b/fg/opt_page/domains.html
@@ -20,7 +20,7 @@
 				 port="port"
 				 editor="page.bg.editor_mgr.openEditorInstanceForScript"
 				 shown="shown"
-				 pa="page.bg.updatePA"
+				 pa="page.bg.tabs_mgr.updatePA"
 				 opts="page.bg.option_mgr.editor">
 	</script-list>
 	
@@ -31,7 +31,7 @@
 				 port="port"
 				 editor="page.bg.editor_mgr.openEditorInstanceForScript"
 				 shown="shown"
-				 pa="page.bg.updatePA"
+				 pa="page.bg.tabs_mgr.updatePA"
 				 opts="page.bg.option_mgr.editor">
 	</script-list>
 	
