--- a/fg/opt_page/groups.html
+++ b/fg/opt_page/groups.html
@@ -18,7 +18,7 @@
 				port="port"
 				editor="page.bg.editor_mgr.openEditorInstanceForScript"
 				shown="shown"
-				pa="page.bg.updatePA"
+				pa="page.bg.tabs_mgr.updatePA"
 				opts="page.bg.option_mgr.editor"
 				sites="group.sites"
 				parent="group"
