--- a/fg/page_action/pa.html
+++ b/fg/page_action/pa.html
@@ -22,7 +22,7 @@
 		
 	</head>
 	
-	<body ng-controller="siteController" ui-sref="pa-site">
+	<body ng-controller="siteController" ui-sref="pa-site" spellcheck="false">
 			
 	  <div class="panel-section panel-section-header">
 		<div class="text-section-header">JSLoader</div>
