--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -48,7 +48,8 @@
 	<div id="content" class="td-tab-content">
 	  <ui-view></ui-view>
 	</div>
-	 
+
+	<script src="../deps/json/json-formatter.js"></script>
 	<script src="options.js"></script>
 	 
   </body>
