JSL Alpha 2: Rules manager

--- a/fg/listener/listener.html
+++ b/fg/listener/listener.html
@@ -63,6 +63,7 @@
 		<http-request ng-repeat="req in list"
 					  ng-show="req.shown"
 					  req="req"
+					  proxys="page.statu.proxys"
 					  urlclick="urlClick"
 					  toggle="toggleRule"
 					  remove="removeRule"> </http-request>
