JSL Alpha 2: Tab Listener OK

--- a/fg/listener/listener.html
+++ b/fg/listener/listener.html
@@ -54,7 +54,7 @@
 	</div>
 	
 	<div id="content" class="panel-section scrollable" ng-controller="listenerController as listener">
-	  <no-info ng-if="!infoShown()"></no-info>
+	  <no-info ng-if="!infoShown()" text="getVoidText()"></no-info>
 
 	  <ul style="display:block;">
 		
